--- a/css/style.css
+++ b/css/style.css
@@ -5951,7 +5951,7 @@ ul.footer-nav li a:hover {
 }
 
 .purchase {
-    background: url(../images/parallax/bg-01.jpg) no-repeat;
+    background: url(../images/parallax.jpg) no-repeat;
     background-attachment: fixed;
     padding: 100px 0;
 }
